# RustMarket

./: .env  Cargo.toml  README.md
src/: alert_monitor.rs  auth.rs  config.rs  db_init.rs  events.rs  features.rs  handlers.rs  lib.rs  main.rs  pages.rs  render.rs  stubs.rs  templates.rs  ws.rs
src/controllers/: alerts_controller.rs  auth_controller.rs  home_controller.rs  mod.rs  portfolio_controller.rs  realtime_controller.rs  stocks_controller.rs  trading_controller.rs  user_controller.rs
src/models/: account.rs  alert.rs  mod.rs  order.rs  position.rs  user.rs
src/routes/: alerts_routes.rs  auth_routes.rs  home_routes.rs  mod.rs  portfolio_routes.rs  realtime_routes.rs  stocks_routes.rs  trading_routes.rs  user_routes.rs
src/services/: account_service.rs  alert_monitor.rs  alerts_service.rs  auth_service.rs  db_init.rs  finnhub.rs  mod.rs  portfolio_service.rs  stocks_service.rs  trading_service.rs  user_service.rs
src/views/: render.rs  templates.rs
static/css/: app.css
static/js/: alertsRealtime.js  app.js  chartData.js  homeWidgets.js  portfolioRealTime.js  sseEvents.js
templates/layouts/: base.hbs
templates/pages/: alerts.hbs  details.hbs  funds.hbs  home.hbs  login.hbs  not_found.hbs  portfolio.hbs  register.hbs  search.hbs  settings.hbs
templates/partials/: alerts_list.hbs  cash_badge.hbs  change_email.hbs  change_password.hbs  footer.hbs  funds_modal.hbs  navbar.hbs  orders_list.hbs  portfolio_position_card.hbs  portfolio_positions.hbs  quote.hbs  (+3 more)
tests/: auth_controller_tests.rs  trading_controller_tests.rs  user_controller_tests.rs
