[package]
name = "RustMarket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
handlebars = "6.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
dotenvy = "0.15"
mongodb = "2"
jsonwebtoken = "9"
chrono = "0.4"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["cookie"] }
