[package]
name = "RustMarket"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
handlebars = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
mongodb = "2"
jsonwebtoken = "9"
chrono = "0.4"
bcrypt = "0.15"
regex = "1"
